# solar-system-opengl

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: build-linux-wayland.yml  build-linux-x11.yml  build-linux.yml  build-macos.yml  build-windows.yml  cmake-linux-wayland.yml  cmake-linux-x11.yml  cmake-macos.yml  cmake-multi-platform.yml  cmake-windows.yml  release-linux-universal.yml  release-macos.yml  release-windows.yml
include/: CMakeLists.txt
include/common/: camera.h  shader.cpp  shader_m.h  stb_image.h
include/glad/include/glad/: gl.h  glad.h
include/glad/src/: glad.c
packaging/: Info.plist  solar-system.desktop  windows.rc
src/: constants.h  input.cpp  input.h  main.cpp  main.h  planet_data.cpp  planet_data.h  rendering.cpp  rendering.h  text_renderer.cpp  text_renderer.h  types.h  utils.cpp  utils.h
src/shaders/: fragmentShader.glsl  planetFragment.glsl  skyboxVertex.glsl  sunFragment.glsl  sunVertex.glsl  textFragment.glsl  textVertex.glsl
